[package]
name = "unicom-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = {version = "0.7.2", features=["compat"]}
hyper = { version = "0.14.19", features = ["full"] }
byteorder = "1.4.3"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
tera = "1.15.0"
lazy_static = "1.4.0"
hyper-staticfile = "0.9.0"
uuid = { version = "1.1.0", features = ["serde", "v4"] }
regex= "1.5.6"
rand = "0.8.5"
toml = "0.5.9"
async-trait = "0.1.53"
nix = "0.24.1"
chrono = "0.4.19"
pwhash = "1.0.0"
shadow = "0.0.1"

unicom-lib = { git = "https://github.com/jiefxxx/unicom-lib" }